# media_api

./: .dockerignore  Dockerfile  Makefile  README.md  docker-compose.yaml  index.html  pyproject.toml
app/: database.py  main.py
app/models/: file.py
