[project]
name = "media"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "beanie>=2.0.0",
    "fastapi>=0.121.1",
    "motor>=3.7.1",
    "python-magic>=0.4.27",
    "python-multipart>=0.0.20",
    "uvicorn[standard]>=0.38.0",
]
